--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "^21.5.3",
-    "@nx/devkit": "21.5.3",
-    "@nx/eslint": "21.5.3",
-    "@nx/eslint-plugin": "21.5.3",
-    "@nx/js": "21.5.3",
-    "@nx/playwright": "21.5.3",
-    "@nx/react": "^21.5.3",
-    "@nx/vite": "21.5.3",
-    "@nx/web": "21.5.3",
+    "@nx/angular": "^21.6.3",
+    "@nx/devkit": "21.6.3",
+    "@nx/eslint": "21.6.3",
+    "@nx/eslint-plugin": "21.6.3",
+    "@nx/js": "21.6.3",
+    "@nx/playwright": "21.6.3",
+    "@nx/react": "21.6.3",
+    "@nx/vite": "21.6.3",
+    "@nx/web": "21.6.3",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
@@ -37,7 +37,8 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "21.5.3",
+    "jsonc-eslint-parser": "^2.1.0",
+    "nx": "21.6.3",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
@@ -47,7 +48,8 @@
   },
   "workspaces": [
     "packages/*",
-    "apps/*"
+    "apps/*",
+    "libs/*"
   ],
   "dependencies": {
     "react": "19.0.0",
